website/versioned_docs/version-2.7.x/reference/subsystems/download-pex-bin.mdx
---
title: download-pex-bin
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

The PEX (Python EXecutable) tool (https://github.com/pantsbuild/pex).

Backend: <span className="color--primary">`pants.core`</span>

Config section: <span className="color--primary">`[download-pex-bin]`</span>

<span className={styles.options}>

## Basic options
None

## Advanced options

### `version`

<Option
  cli_repr={`--download-pex-bin-version=<str>`}
  env_repr='PANTS_DOWNLOAD_PEX_BIN_VERSION'
  default_repr={`v2.1.54`}
>

Use this version of pex.

Supported pex versions: &gt;=2.1.51,&lt;3.0

</Option>

### `known_versions`

<Option
  cli_repr={`--download-pex-bin-known-versions="['<str>', '<str>', ...]"`}
  env_repr='PANTS_DOWNLOAD_PEX_BIN_KNOWN_VERSIONS'
  default_repr={`[\n  "v2.1.54|macos_arm64|c892c82961f73e41aaafad3c692cfd51f6013bed2f7b408041be6c1b90d06451|3679238",\n  "v2.1.54|macos_x86_64|c892c82961f73e41aaafad3c692cfd51f6013bed2f7b408041be6c1b90d06451|3679238",\n  "v2.1.54|linux_x86_64|c892c82961f73e41aaafad3c692cfd51f6013bed2f7b408041be6c1b90d06451|3679238"\n]`}
>


Known versions to verify downloads against.

Each element is a pipe-separated string of `version|platform|sha256|length`, where:

  - `version` is the version string
  - `platform` is one of [linux_x86_64,macos_arm64,macos_x86_64],
  - `sha256` is the 64-character hex representation of the expected sha256
```
digest of the download file, as emitted by `shasum -a 256`
```

  - `length` is the expected length of the download file in bytes, as emmitted by
```
`wc -c`
```

E.g., `3.1.2|macos_x86_64|6d0f18cd84b918c7b3edd0203e75569e0c7caecb1367bbbe409b44e28514f5be|42813`.

Values are space-stripped, so pipes can be indented for readability if necessary.

</Option>

### `use_unsupported_version`

<Option
  cli_repr={`--download-pex-bin-use-unsupported-version=<UnsupportedVersionUsage>`}
  env_repr='PANTS_DOWNLOAD_PEX_BIN_USE_UNSUPPORTED_VERSION'
  one_of='error, warning'
  default_repr={`error`}
>


What action to take in case the requested version of pex is not supported.

Supported pex versions: &gt;=2.1.51,&lt;3.0

</Option>

### `url_template`

<Option
  cli_repr={`--download-pex-bin-url-template=<str>`}
  env_repr='PANTS_DOWNLOAD_PEX_BIN_URL_TEMPLATE'
  default_repr={`https://github.com/pantsbuild/pex/releases/download/{version}/pex`}
>

URL to download the tool, either as a single binary file or a compressed file (e.g. zip file). You can change this to point to your own hosted file, e.g. to work with proxies or for access via the filesystem through a file:// URL.

Use `{version}` to have the value from --version substituted, and `{platform}` to have a value from --url-platform-mapping substituted in, depending on the current platform. For example, https://github.com/.../protoc-&#123;version&#125;-&#123;platform&#125;.zip.

</Option>

### `url_platform_mapping`

<Option
  cli_repr={`--download-pex-bin-url-platform-mapping="{'key1': val1, 'key2': val2, ...}"`}
  env_repr='PANTS_DOWNLOAD_PEX_BIN_URL_PLATFORM_MAPPING'
  default_repr={`{}`}
>

A dictionary mapping platforms to strings to be used when generating the URL to download the tool.

In --url-template, anytime the `{platform}` string is used, Pants will determine the current platform, and substitute `{platform}` with the respective value from your dictionary.

For example, if you define `{"macos_x86_64": "apple-darwin", "linux_x86_64": "unknown-linux"}, and run Pants on Linux with an intel architecture, then `&#123;platform&#125;` will be substituted in the --url-template option with unknown-linux.

</Option>

## Deprecated options

None

</span>